<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#32CD32">


    <EditText
        android:id="@+id/nombre"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/nombre"
        android:layout_marginTop="40dp"

        />


    <EditText
        android:id="@+id/apellido"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:hint="@string/apellido"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/correo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:hint="@string/correo"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/contraseña"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:layout_marginTop="20dp"

        />
    <Button
        android:id="@+id/Registrar"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#193045"
        android:text="@string/Registrar"
        android:layout_marginTop="3pt"
        android:textColor="#FFFFFF" />

</LinearLayout>