<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#193045" >

<LinearLayout

    android:layout_width="match_parent"
    android:background="#193045"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:background="#193045"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"

        android:layout_marginTop="40dp">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#193045"
            android:orientation="vertical">
            <Button
                android:id="@+id/button1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/periodico"
                android:layout_margin="20dp"/>


            <TextView
                android:id="@+id/b1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"

                android:text="@string/noticias"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#193045"
            android:orientation="vertical">
            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/tienda"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/b2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tienda"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#193045"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#193045"
            android:orientation="vertical">

            <Button
                android:id="@+id/sell"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/pegatina"
                />

            <TextView
                android:id="@+id/b3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vender"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#193045"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGym"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/gimnasio"
                />

            <TextView
                android:id="@+id/b4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lugares"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    </ScrollView>
